--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://fonts.cdnfonts.com/css/mortal-kombat" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/mortal-kombat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
 
@@ -36,7 +36,7 @@
     </div>
 
     <style>
-        @import url('http://fonts.cdnfonts.com/css/mortal-kombat');
+        @import url('https://fonts.cdnfonts.com/css/mortal-kombat');
     </style>
     <script src="./assets/js/script.js"></script>
 </body>
