fixed html links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <div id="clock"></div>
         <div id="jsQuestions">
-            <a href="HighScores.html">View Highscores</a>
+            <a href="./highscores.html">View Highscores</a>
             <h1>Test Your JavaScript!</h1>
             <p>Put your knowledge to the test in this JavaScript quiz. Keep track of the timer
                 and try to answer all the questions correctly before the timer ends. You will also lose time 
